Fixed z-index issue with datepicker popover

--- a/src/components/ArticleDatePicker.css
+++ b/src/components/ArticleDatePicker.css
@@ -4,6 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 999;
 }
 
 .react-datepicker__input-container {
@@ -13,3 +14,7 @@
 .react-datepicker-wrapper:input {
     display: none !important;
 }
+
+.react-datepicker__header {
+    background-color: #FFF;
+  }
